<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnUnicode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printunicode" />

        <Button
            android:id="@+id/bt_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_printword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_autoprint" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" />


</LinearLayout>
